# schiebung

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  LICENSE  README.md  Readme.md  demo.webm  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.cargo/: config.toml
.github/workflows/: ci.yaml  python.yaml  release.yaml  rust.yaml
comms/: Cargo.toml  README.md  build.rs  messages.capnp  mkdocs.yml
comms/docs/: index.md
comms/examples/: benchmark.rs  publish_transforms.rs
comms/src/: client.rs  config.rs  error.rs  lib.rs  serializers.rs  server.rs
comms/tests/: integration_test.rs
core/: mkdocs.yml
core/docs/: python.md  rust.md
core/schiebung-core-py/: Cargo.toml  README.md  pyproject.toml
core/schiebung-core-py/examples/: observer_demo.py
core/schiebung-core-py/src/: lib.rs
core/schiebung-core-py/tests/: test_api.py  test_numpy.py  test_observer.py  test_stamp.py
core/schiebung-core-rs/: Cargo.toml  README.md
core/schiebung-core-rs/benches/: buffer_benchmark.rs
core/schiebung-core-rs/src/: buffer.rs  config.rs  error.rs  lib.rs  types.rs  utils.rs
docs/: demo.webm  demo_urdf.webm  index.md
resources/: test_robot.urdf
schiebung-client/: Cargo.toml  README.md
schiebung-client/src/: lib.rs  main.rs
schiebung-client/tests/: integration_tests.rs
schiebung-client/tests/common/: mod.rs
schiebung-commons/: Cargo.toml
schiebung-commons/src/: lib.rs
schiebung-comms/: index.html
schiebung-core/: Cargo.toml  Readme.md
schiebung-core-py/: Cargo.toml  README.md  pyproject.toml
schiebung-core-py/python/schiebung_core/: __init__.py
schiebung-core-py/src/: lib.rs
schiebung-core-py/tests/: test_api.py  test_observer.py
schiebung-core-rs/: Cargo.toml
schiebung-core-rs/benches/: buffer_benchmark.rs
schiebung-core-rs/src/: buffer.rs  error.rs  lib.rs  types.rs
schiebung-core/python/: index.html
schiebung-core/rust/: index.html
schiebung-core/src/: config.rs  lib.rs  main.rs  types.rs
schiebung-rerun/: Cargo.toml
schiebung-rerun-py/: Cargo.toml  README.md
schiebung-rerun-py/src/: lib.rs
schiebung-rerun-py/tests/: test_rerun_buffer.py
schiebung-rerun/examples/: demo.rs  urdf_demo.rs
schiebung-rerun/src/: lib.rs
schiebung-server/: Cargo.toml
schiebung-server/src/: config.rs  lib.rs  main.rs  types.rs
schiebung-types/: Cargo.toml
schiebung-types/src/: lib.rs
schiebung-visualizer/python/: index.html
schiebung-visualizer/rust/: index.html
schiebung_ros2/: .gitignore  Cargo.toml  README.md  Readme.md  package.xml
schiebung_ros2/.cargo/: config.toml
schiebung_ros2/launch/: tf_relay.launch.xml
schiebung_ros2/src/: lib.rs  main.rs
schiebung_server/src/: lib.rs  main.rs
search/: search_index.json
server/docker/: README.md  docker-compose.yml  run_demo.sh
server/docker/client/: Dockerfile  client.py
server/docker/server/: Dockerfile  server.py
server/docs/: python.md  rust.md
server/schiebung-server-py/: Cargo.toml  README.md  pyproject.toml
server/schiebung-server-py/src/: lib.rs
server/schiebung-server-rs/: Cargo.toml
server/schiebung-server-rs/src/: lib.rs
visualizer/: mkdocs.yml
visualizer/docs/: python.md  rust.md
visualizer/schiebung-rerun-py/: Cargo.toml  README.md  pyproject.toml
visualizer/schiebung-rerun-py/examples/: demo.py  external_viewer_demo.py  sinks_demo.py  urdf_demo.py
visualizer/schiebung-rerun-py/src/: lib.rs
visualizer/schiebung-rerun-py/tests/: test_interop.py  test_rerun_buffer.py
visualizer/schiebung-rerun-rs/: Cargo.toml  README.md
visualizer/schiebung-rerun-rs/examples/: README.md  demo.rs  urdf_demo.rs
visualizer/schiebung-rerun-rs/src/: lib.rs
