[package]
name = "schiebung-client"
version = "0.1.0"
edition = "2021"

[dependencies]
iceoryx2 = "*"
schiebung-core = {path = "../schiebung-core"}
schiebung-server = {path = "../schiebung-server"}
nalgebra = "*"
log = "*"
env_logger = "*"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
schiebung-server = {path = "../schiebung-server"}
iceoryx2-bb-posix = "*"
approx = "*"