[package]
name = "schiebung-client"
version = "0.1.0"
edition = "2021"

[dependencies]
iceoryx2 = "0.8.0"
schiebung = {path = "../schiebung-core-rs"}
schiebung-commons = {path = "../schiebung-commons"}
schiebung-server = {path = "../schiebung-server"}
nalgebra = "0.33.2"
env_logger = "0.11.7"
log = "0.4.25"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
schiebung-server = {path = "../schiebung-server"}
approx = "0.5.1"
