[package]
name = "schiebung-rerun-py"
version = "0.1.0"
edition = "2021"
keywords = ["transform", "tf", "visualization", "rerun"]
categories = ["robotics"]

[dependencies]
schiebung = { path = "../schiebung-core-rs" }
schiebung-rerun = { path = "../schiebung-rerun" }
pyo3 = { version = ">=0.26.0", features = ["abi3-py312"] }
rerun = "0.28.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
