[package]
name = "schiebung-server"
version = "0.1.0"
edition = "2021"

[dependencies]
iceoryx2 = "0.5.0"
schiebung-core = {path = "../schiebung-core"}
env_logger = "0.11.7"
log = "0.4.25"
nalgebra = "0.33.2"
confy = "0.6.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"