[package]
name = "schiebung-server"
version = "0.1.0"
edition = "2021"

[dependencies]
iceoryx2 = "0.8.0"
schiebung = {path = "../schiebung-core-rs"}
schiebung-commons = {path = "../schiebung-commons"}
env_logger = "0.11.7"
log = "0.4.25"
nalgebra = "0.33.2"
confy = "0.6.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
