[package]
name = "schiebung_ros2"
version = "0.1.0"
edition = "2021"

[dependencies]
rclrs = "*"
schiebung-client = { version = "0.1.0", path = "../schiebung-client" }
schiebung-core = { version = "0.1.0", path = "../schiebung-core" }
tf2_msgs = "*"
nalgebra = "*"
log = "*"
env_logger = "*"

[package.metadata.ros]
install_to_share = ["launch"]