[package]
name = "schiebung-py"
version = "0.2.0"
edition = "2021"
description = "Python bindings for the schiebung transform library"
license = "MIT"
repository = "https://github.com/MaxiMaerz/schiebung"
documentation = "https://maximaerz.github.io/schiebung/"
homepage = "https://github.com/MaxiMaerz/schiebung"
keywords = ["transform", "tf", "tf2"]
categories = ["science::robotics"]

[dependencies]
schiebung = { path = "../schiebung-core-rs" }
pyo3 = { version = ">=0.26.0", features = ["abi3-py312"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
