[package]
name = "schiebung-rerun-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for schiebung with Rerun visualization"
license = "MIT"
repository = "https://github.com/MaxiMaerz/schiebung"
documentation = "https://maximaerz.github.io/schiebung/"
homepage = "https://github.com/MaxiMaerz/schiebung"
keywords = ["transform", "tf", "visualization", "rerun"]
categories = ["science::robotics"]

[dependencies]
schiebung = { path = "../../core/schiebung-core-rs" }
schiebung-rerun = { path = "../schiebung-rerun-rs" }
schiebung-py = { path = "../../core/schiebung-core-py" }
pyo3 = { version = ">=0.26.0", features = ["abi3-py312"] }
rerun = "0.28.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
