[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "schiebung-rerun"
# Sourced from this crate's Cargo.toml (which inherits from the workspace).
dynamic = ["version"]
description = "Python bindings for schiebung with Rerun visualization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Maerz"},
]

keywords = ["robotics", "transform", "visualization", "rerun"]

dependencies = [
    "numpy>=1.20",
    "rerun-sdk>=0.31.4",
    # The core bindings: schiebung_rerun re-exports StampedIsometry / BufferTree /
    # TransformType / TfError / UrdfLoader from this package so the two share the
    # exact same Python types. Kept in lockstep with this package's version.
    "schiebung==0.4.0",
]

[project.urls]
Homepage = "https://github.com/MaxiMaerz/schiebung/"
Repository = "https://github.com/MaxiMaerz/schiebung/"
"Bug Tracker" = "https://github.com/MaxiMaerz/schiebung/issues"

[tool.maturin]
module-name = "schiebung_rerun"
manifest-path = "Cargo.toml"
bindings = "pyo3"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "rerun-sdk>=0.31.4",
]
